# ffxiv-companion

./: .dockerignore  .gitignore  Dockerfile  HANDOVER.md  LEARNING.md  README.md  docker-compose.yml
.github/workflows/: build-electron.yml  deploy.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: AssistantChat.jsx  EorzeanClock.jsx  FillerNodesSidebar.jsx  Filters.jsx  FolkloreGuide.jsx  Layout.jsx  NodeTable.jsx  TimedNodesSidebar.jsx  WorldSelector.jsx
client/src/context/: FilterContext.jsx
client/src/data/: beastTribes.js  bisGear.js  checklistData.js  collectables.js  craftingCollectables.js  ffxivData.js  fillerNodes.js  folkloreGuide.js  materialUsages.js  (+2 more)
overlay-app/: README.md  main.js  package-lock.json  package.json  preload.js
server/: fetch_craftable_items.py  fetch_crafting_collectables.py  fetch_scrip_data.py  fetch_teamcraft_nodes.py  generate_scrip_data.py  package-lock.json  package.json  pyproject.toml
server/app/: agent.py  main.py
server/app/data/: craftingCollectables.json  craftingMaterials.json  currencyExchanges.json  fishingHoles.json  gatheringNodes.json  keyMaterials.json  recipes.json
server/app/routes/: assistant.py  collectables.py  crafting.py  deals.py  exchanges.py  fishing.py  nodes.py  prices.py  retainers.py
server/app/utils/: cache.py  eorzean_time.py  throttle.py
server/src/: index.js
server/src/data/: gatheringNodes.json
server/src/routes/: nodes.js  prices.js
server/src/utils/: cache.js  eorzeanTime.js
(+17 files in other folders)
